--- a/CinemaApplication/CinemaApplication.Blazor/Pages/MovieEdit.razor
+++ b/CinemaApplication/CinemaApplication.Blazor/Pages/MovieEdit.razor
@@ -3,9 +3,10 @@
 @using CinemaApplication.Blazor.Services;
 @using CinemaApplication.Contract;
 @inject IMovieService MovieService;
+@inject IDirectorService DirectorService;
 @inject NavigationManager NavigationManager
 
-@if (Movie is null)
+@if (Movie is null || Directors is null)
 {
     <p>Loading...</p>
 }
@@ -13,7 +14,7 @@ else
 {
     <h3>Edit @Movie.Title</h3>
 
-    <MovieForm Movie="@Movie" ButtonTitle="Edit" HandleValidSubmitAsync="@HandleValidSubmitAsync" />
+    <MovieForm Movie="@Movie" ButtonTitle="Edit" HandleValidSubmitAsync="@HandleValidSubmitAsync" Directors="Directors" />
     <table>
         <tr>
             <td><button onclick="@HandleDeleteAsync" class="btn btn-danger form-control">Delete</button></td>
@@ -30,13 +31,17 @@ else
 
     private Movie? Movie { get; set; }
 
+    private IEnumerable<Director> Directors { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         Movie = await MovieService.GetMovieByIdAsync(Id);
+        Directors = await DirectorService.GetAllDirectorAsync();
     }
 
     private async Task HandleValidSubmitAsync()
     {
+        Movie.DirectorId = Directors.FirstOrDefault(x => x.Name == Movie.DirectorName).DirectorId;
         await MovieService.UpdateMovieAsync(Id, Movie!);
         NavigationManager.NavigateTo("/movies");
     }
