--- a/CinemaApplication/CinemaApplication.Blazor/Pages/MovieList.razor
+++ b/CinemaApplication/CinemaApplication.Blazor/Pages/MovieList.razor
@@ -1,7 +1,10 @@
-﻿@page "/movies"
+﻿@page "/"
+@page "/movies"
 @using CinemaApplication.Blazor.Services;
 @using CinemaApplication.Contract;
 @inject IMovieService MovieService;
+@inject IDirectorService DirectorService;
+@inject NavigationManager NavigationManager
 
 @if (Movies == null)
 {
@@ -16,6 +19,7 @@ else
                 <th>Title</th>
                 <th>Category</th>
                 <th>Publication Year</th>
+                <th>Director</th>
                 <th><a href="movies/add" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Add Movie</a></th>
             </tr>
         </thead>
@@ -25,7 +29,11 @@ else
                 <td>@movie.Title</td>
                 <td>@movie.Category</td>
                 <td>@movie.PublicationYear</td>
-                <td><a href="movies/edit/@movie.MovieId" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Edit</a></td>
+                <td>@movie.DirectorName</td>
+                <td>
+                    <a href="movies/edit/@movie.MovieId" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Edit</a>
+                    <button @onclick="() => HandleDeleteAsync(movie.MovieId)" class="btn btn-danger btn-lg active" role="button" aria-pressed="true">Delete</button>
+                </td>
             </tr>
         }
     </table>
@@ -34,8 +42,21 @@ else
 @code {
     private IEnumerable<Movie>? Movies { get; set; }
 
+    private async Task HandleDeleteAsync(int id)
+    {
+        await MovieService.DeleteMovieAsync(id);
+        NavigationManager.NavigateTo("/movies", true);
+    }
+
     protected async override Task OnInitializedAsync()
     {
         Movies = await MovieService.GetAllMovieAsync();
+
+        IEnumerable<Director> directors = await DirectorService.GetAllDirectorAsync();
+        Dictionary<int, string>? directorMap = directors.ToDictionary(x => x.DirectorId, x => x.Name);
+        foreach (Movie movie in Movies)
+        {
+            movie.DirectorName = directorMap.TryGetValue(movie.DirectorId, out string name) ? name : "";
+        }
     }
 }
