--- a/CinemaApplication/CinemaApplication.Blazor/Pages/DirectorEdit.razor
+++ b/CinemaApplication/CinemaApplication.Blazor/Pages/DirectorEdit.razor
@@ -43,7 +43,7 @@ else
 
     private async Task HandleDeleteAsync()
     {
-        await DirectorService.DeleteDirectorAsync(Id);
+        await DirectorService.DeleteDirectorWithMoviesAsync(Id);
         NavigationManager.NavigateTo("/directors");
     }
 
