--- a/CinemaApplication/CinemaApplication.Blazor/Pages/DirectorList.razor
+++ b/CinemaApplication/CinemaApplication.Blazor/Pages/DirectorList.razor
@@ -17,6 +17,7 @@ else
             <tr>
                 <th>Name</th>
                 <th>Year of birth</th>
+                <th>Nationality</th>
                 <th>Directed Movies</th>
                 <th><a href="directors/add" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Add Director</a></th>
             </tr>
@@ -26,6 +27,7 @@ else
             <tr>
                 <td>@director.Name</td>
                 <td>@director.YearOfBirth</td>
+                <td>@director.Nationality</td>
                 <td>
                     <ul>
                         @foreach (Movie movie in director.DirectedMovies)
